--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta charset="utf-8" />
-		<title></title>
+		<title>Song Lan</title>
+		
+		<link href="https://fonts.googleapis.com/css?family=Oswald:300,400|Playball|Raleway" rel="stylesheet" />
+		<link href="css/resule.min.css" rel="stylesheet" />
 	</head>
 
 	<body>
+		<!-- Slogan -->
+		<div id="slogan">
+			<div> “La Simplicité est la Sophistication suprême” <span class="author">Leonardo Da Vinci</span></div>
+		</div>
+
 		Hello World, this is me
 	</body>
 </html>
