--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>Song Lan</title>
 		
 		<link href="https://fonts.googleapis.com/css?family=Oswald:300,400|Playball|Raleway" rel="stylesheet" />
-		<link href="css/resule.min.css" rel="stylesheet" />
+		<link href="css/resume.min.css" rel="stylesheet" />
 	</head>
 
 	<body>
