--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link href="css/resume.min.css" rel="stylesheet" />
 	</head>
 
-	<body>
+	<body class="gradient">
 		<!-- Slogan -->
 		<div id="slogan">
 			<div> “La Simplicité est la Sophistication suprême” <span class="author">Leonardo Da Vinci</span></div>
