--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<title>Song Lan</title>
 		
-		<link href="https://fonts.googleapis.com/css?family=Oswald:300,400|Playball|Raleway" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css?family=Oswald:300,400|Playball|Raleway" rel="stylesheet" type='text/css' />
 		<link href="css/resume.min.css" rel="stylesheet" />
 	</head>
 
