--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Song Lan</title>
-		
+		<link href='https://fonts.googleapis.com/css?family=Dosis:500|Droid+Sans' rel='stylesheet' type='text/css' />
+
 		<link href="https://fonts.googleapis.com/css?family=Oswald:300,400|Playball|Raleway" rel="stylesheet" type='text/css' />
 		<link href="css/resume.min.css" rel="stylesheet" />
 	</head>
