--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta charset="utf-8" />
 		<title>Song Lan</title>
+		
 		<link href='https://fonts.googleapis.com/css?family=Dosis:500|Droid+Sans' rel='stylesheet' type='text/css' />
 
 		<link href="https://fonts.googleapis.com/css?family=Oswald:300,400|Playball|Raleway" rel="stylesheet" type='text/css' />
